k8s/apps/kodesphere/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kodesphere
  namespace: kodesphere
spec:
  selector:
    app: kodesphere
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kodesphere-api
  namespace: kodesphere
spec:
  selector:
    app: kodesphere
  ports:
    - port: 5000
      targetPort: 5000
