k8s/apps/kodesphere/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kodesphere-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ks.upayan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kodesphere
                port:
                  number: 3000
    - host: api.ks.upayan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kodesphere-api
                port:
                  number: 5000
